import proguard.gradle.ProGuardTask

buildscript {
    dependencies {
        classpath 'net.sf.proguard:proguard-gradle:6.1.0beta1'
    }
}

plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '4.0.3'
}

group 'support.kajstech.kajbot'
version '1.0-SNAPSHOT'
mainClassName = 'support.kajstech.kajbot.Main'
sourceCompatibility = 1.8

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
    compile('org.reflections:reflections:0.9.11')
    compile('net.dv8tion:JDA:3.8.1_454') {
        exclude module: 'opus-java'
    }
    compile('com.jagrosh:jda-utilities-command:2.1.5')
}

task proguard(type: ProGuardTask) {
    configuration 'proguard.txt'

    injars shadowJar
    outjars 'build/libs/Kajbot-release.jar'

    dontwarn()
}

shadowJar{
    mergeServiceFiles('META-INF/spring.*')
    exclude "META-INF/*.SF"
    exclude "META-INF/*.DSA"
    exclude "META-INF/*.RSA"
    exclude "META-INF/LICENSE"
    exclude "META-INF/LICENSE.*"
    exclude "META-INF/NOTICE"
    exclude "META-INF/NOTICE.*"
    exclude ("META-INF/maven/**")
    exclude ("META-INF/proguard/**")
    archiveName = "${baseName}.jar"
}